--- a/Virta/Controllers/EvseCollectionViewCell.xib
+++ b/Virta/Controllers/EvseCollectionViewCell.xib
@@ -6,40 +6,51 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Campton-BoldDEMO.otf">
+            <string>Campton-BoldDEMO</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EvseCollectionViewCell" id="gTV-IL-0wX" customClass="EvseCollectionViewCell" customModule="Virta" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="216" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="240" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="216" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="240" height="60"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfP-Z2-D0O">
-                        <rect key="frame" x="0.0" y="0.0" width="216" height="56"/>
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="56"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2020" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfe-WM-xlP">
-                                <rect key="frame" x="8" y="18" width="41" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfe-WM-xlP">
+                                <rect key="frame" x="20" y="20" width="38.5" height="16"/>
+                                <fontDescription key="fontDescription" name="Campton-BoldDEMO" family="Campton" pointSize="15"/>
+                                <color key="textColor" red="0.15686274510000001" green="0.40784313729999999" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vfe-WM-xlP" firstAttribute="top" secondItem="dfP-Z2-D0O" secondAttribute="top" constant="20" id="0U3-7D-dHh"/>
+                            <constraint firstItem="vfe-WM-xlP" firstAttribute="leading" secondItem="dfP-Z2-D0O" secondAttribute="leading" constant="20" id="iNu-bM-5VY"/>
+                            <constraint firstAttribute="width" constant="240" id="tLL-YW-4K6"/>
+                            <constraint firstAttribute="bottom" secondItem="vfe-WM-xlP" secondAttribute="bottom" constant="20" id="wmk-pf-BiD"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="dfP-Z2-D0O" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="FzR-FT-LaO"/>
                 <constraint firstAttribute="bottom" secondItem="dfP-Z2-D0O" secondAttribute="bottom" constant="4" id="Isf-Dh-FCf"/>
-                <constraint firstItem="dfP-Z2-D0O" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="W3h-7a-ES3"/>
-                <constraint firstAttribute="trailing" secondItem="dfP-Z2-D0O" secondAttribute="trailing" id="nlB-PF-Du9"/>
+                <constraint firstAttribute="trailing" secondItem="dfP-Z2-D0O" secondAttribute="trailing" id="P1W-h7-sal"/>
                 <constraint firstItem="dfP-Z2-D0O" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rjf-Vm-H6H"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <viewLayoutGuide key="safeArea" id="wH7-og-fhl"/>
             <size key="customSize" width="216" height="50"/>
             <connections>
+                <outlet property="evseCollectionViewCellWidthConstraint" destination="tLL-YW-4K6" id="Q9J-48-bxC"/>
                 <outlet property="id" destination="vfe-WM-xlP" id="I0N-nd-A5w"/>
             </connections>
             <point key="canvasLocation" x="155.07246376811597" y="88.392857142857139"/>
