--- a/Virta/Views/Base.lproj/Main.storyboard
+++ b/Virta/Views/Base.lproj/Main.storyboard
@@ -92,10 +92,124 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="85.714285714285708"/>
+            <point key="canvasLocation" x="100" y="86"/>
+        </scene>
+        <!--Stations List Table View Controller-->
+        <scene sceneID="Wgj-Ff-AAk">
+            <objects>
+                <tableViewController storyboardIdentifier="StationsListViewController" id="UjM-Qe-YN9" customClass="StationsListTableViewController" customModule="Virta" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="r4b-4c-htJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="stationCell" rowHeight="132" id="V2c-Tp-x1s" customClass="StationTableViewCell" customModule="Virta" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="132"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="V2c-Tp-x1s" id="sDu-Jz-B2C">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="StationName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZq-Gj-Vhu">
+                                            <rect key="frame" x="36" y="22" width="240" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="240" id="0J9-UI-bnV"/>
+                                                <constraint firstAttribute="height" constant="20" id="ETU-08-KFM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                            <color key="textColor" red="0.098039215686274508" green="0.19607843137254902" blue="0.29411764705882354" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D2c-Xi-REL">
+                                            <rect key="frame" x="36" y="42" width="63" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="Aw0-MC-hBL"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.098039215690000001" green="0.1960784314" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.5 km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Exn-VC-wPZ">
+                                            <rect key="frame" x="244" y="25" width="122" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16" id="3ZY-3v-4D4"/>
+                                                <constraint firstAttribute="width" constant="122" id="cmg-Di-SBk"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.15686274509803921" green="0.40784313725490196" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ub2-WQ-xfd">
+                                            <rect key="frame" x="36" y="65" width="358" height="61"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <stackView key="tableFooterView" opaque="NO" contentMode="scaleToFill" id="AqT-q5-3TC">
+                                                <rect key="frame" x="0.0" y="0.0" width="358" height="62"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </stackView>
+                                        </tableView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icNavigate" translatesAutoresizingMaskIntoConstraints="NO" id="HDo-uD-s0m">
+                                            <rect key="frame" x="377" y="24" width="18" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="agQ-LJ-bRw"/>
+                                                <constraint firstAttribute="width" constant="18" id="rOd-At-p3l"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="HDo-uD-s0m" firstAttribute="top" secondItem="sDu-Jz-B2C" secondAttribute="topMargin" constant="13" id="3tF-Eh-ro4"/>
+                                        <constraint firstItem="D2c-Xi-REL" firstAttribute="leading" secondItem="sDu-Jz-B2C" secondAttribute="leadingMargin" constant="16" id="8BA-wA-pMA"/>
+                                        <constraint firstItem="HDo-uD-s0m" firstAttribute="leading" secondItem="Exn-VC-wPZ" secondAttribute="trailing" constant="11" id="DQ6-tf-ynq"/>
+                                        <constraint firstItem="D2c-Xi-REL" firstAttribute="top" secondItem="uZq-Gj-Vhu" secondAttribute="bottom" id="Jan-hG-UZO"/>
+                                        <constraint firstItem="ub2-WQ-xfd" firstAttribute="top" secondItem="D2c-Xi-REL" secondAttribute="bottom" constant="5" id="KZ8-Wj-h5l"/>
+                                        <constraint firstItem="ub2-WQ-xfd" firstAttribute="trailing" secondItem="sDu-Jz-B2C" secondAttribute="trailingMargin" id="V6j-1D-ZEy"/>
+                                        <constraint firstItem="Exn-VC-wPZ" firstAttribute="top" secondItem="sDu-Jz-B2C" secondAttribute="topMargin" constant="14" id="WHF-vj-FSb"/>
+                                        <constraint firstItem="ub2-WQ-xfd" firstAttribute="bottom" secondItem="sDu-Jz-B2C" secondAttribute="bottomMargin" constant="5" id="buQ-Wv-5fe"/>
+                                        <constraint firstItem="uZq-Gj-Vhu" firstAttribute="leading" secondItem="sDu-Jz-B2C" secondAttribute="leadingMargin" constant="16" id="mNH-1z-pjh"/>
+                                        <constraint firstAttribute="trailing" secondItem="HDo-uD-s0m" secondAttribute="trailing" constant="19" id="piO-kt-D4L"/>
+                                        <constraint firstItem="ub2-WQ-xfd" firstAttribute="leading" secondItem="sDu-Jz-B2C" secondAttribute="leadingMargin" constant="16" id="r2G-Td-zji"/>
+                                        <constraint firstItem="uZq-Gj-Vhu" firstAttribute="top" secondItem="sDu-Jz-B2C" secondAttribute="topMargin" constant="11" id="vHh-A0-2Lz"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <accessibility key="accessibilityConfiguration" identifier="stationCell"/>
+                                <connections>
+                                    <outlet property="address" destination="D2c-Xi-REL" id="cVX-c2-k9R"/>
+                                    <outlet property="distance" destination="Exn-VC-wPZ" id="je2-Bj-qlp"/>
+                                    <outlet property="name" destination="uZq-Gj-Vhu" id="VGN-GO-ERC"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="UjM-Qe-YN9" id="lXS-te-NGc"/>
+                            <outlet property="delegate" destination="UjM-Qe-YN9" id="2qF-9V-QhT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="M75-tE-X7s"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n7W-Oz-ffU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1918.840579710145" y="85.714285714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uDO-fU-PEg">
+            <objects>
+                <navigationController storyboardIdentifier="StationsListNavControllerIdentifier" automaticallyAdjustsScrollViewInsets="NO" id="0ZT-Mt-9VR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UEL-4P-R8s">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UjM-Qe-YN9" kind="relationship" relationship="rootViewController" id="Hcb-SS-zOq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YJW-nj-9eT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1008.6956521739131" y="85.714285714285708"/>
         </scene>
     </scenes>
     <resources>
+        <image name="icNavigate" width="24" height="24"/>
         <image name="logIn" width="140" height="130"/>
     </resources>
 </document>
