--- a/Virta/Controllers/EvseCollectionViewCell.xib
+++ b/Virta/Controllers/EvseCollectionViewCell.xib
@@ -24,19 +24,22 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfP-Z2-D0O">
                         <rect key="frame" x="0.0" y="0.0" width="240" height="56"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfe-WM-xlP">
-                                <rect key="frame" x="20" y="20" width="38.5" height="16"/>
-                                <fontDescription key="fontDescription" name="Campton-BoldDEMO" family="Campton" pointSize="15"/>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2020" borderStyle="bezel" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UPe-Sw-XAr">
+                                <rect key="frame" x="17" y="17" width="53" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="q71-0R-fDu"/>
+                                </constraints>
                                 <color key="textColor" red="0.15686274510000001" green="0.40784313729999999" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <fontDescription key="fontDescription" name="Campton-BoldDEMO" family="Campton" pointSize="15"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vfe-WM-xlP" firstAttribute="top" secondItem="dfP-Z2-D0O" secondAttribute="top" constant="20" id="0U3-7D-dHh"/>
-                            <constraint firstItem="vfe-WM-xlP" firstAttribute="leading" secondItem="dfP-Z2-D0O" secondAttribute="leading" constant="20" id="iNu-bM-5VY"/>
+                            <constraint firstItem="UPe-Sw-XAr" firstAttribute="leading" secondItem="dfP-Z2-D0O" secondAttribute="leading" constant="17" id="IdK-qU-8tt"/>
+                            <constraint firstAttribute="bottom" secondItem="UPe-Sw-XAr" secondAttribute="bottom" constant="17" id="PO5-JB-rAO"/>
+                            <constraint firstItem="UPe-Sw-XAr" firstAttribute="top" secondItem="dfP-Z2-D0O" secondAttribute="top" constant="17" id="YUd-FE-Ahu"/>
                             <constraint firstAttribute="width" constant="240" id="tLL-YW-4K6"/>
-                            <constraint firstAttribute="bottom" secondItem="vfe-WM-xlP" secondAttribute="bottom" constant="20" id="wmk-pf-BiD"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -51,7 +54,7 @@
             <size key="customSize" width="216" height="50"/>
             <connections>
                 <outlet property="evseCollectionViewCellWidthConstraint" destination="tLL-YW-4K6" id="Q9J-48-bxC"/>
-                <outlet property="id" destination="vfe-WM-xlP" id="I0N-nd-A5w"/>
+                <outlet property="id" destination="UPe-Sw-XAr" id="bdR-r5-myS"/>
             </connections>
             <point key="canvasLocation" x="155.07246376811597" y="88.392857142857139"/>
         </collectionViewCell>
